Changed project to use JAVA 8